# pyprinty

./: CNAME  Colors.html  Fonts.html  LICENSE  Library capabilities.html  README.md  exemple.txt  file.txt  index.html  main.txt  pyproject.toml  welcome.html
docs/: Welcome.html  index.html
src/pyprinty/: __init__.py  _page.py  ansi.py  colors.py  terminal.py
tests/: colors_test.py  page_test.py  terminal_test.py
