[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprinty"
version = "3.0.0"
description = "Extensions to the print command and strings in general."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Yedidya steinmetz", email = "yedist10@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries"
]
keywords = [
    "print", "terminal", "text", "output", "effects", "colors", "strings", "str",
    "fonts", "console"]

[tool.setuptools.packages.find]
where = ["src"]
